--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
-    <h3>Sumar dos números</h3>
-    <form action="">
+    <div>
+        <h3>Sumar dos números</h3>
+        <form action="">
         Valor 1: <input type="number" id="valor1" value="0"><br>
         Valor 2: <input type="number" id="valor2" value="0"><br>
         <input type="button" value="Sumar" onclick="sumar();"><br>
         <input type="button" value="Restar" onclick="restar();"><br>
         <input type="button" value="Multiplicar" onclick="multiplicacion();"><br>
+        <input type="button" value="Dividir" onclick="division();"><br>
 
         Resultado: <input type="number" id="resultado" value = "0">
 
+    </div>
+    
     </form>
 
     <script>
@@ -48,6 +53,16 @@
             multiplicacion = v1 * v2;
 
             document.getElementById("resultado").value = multiplicacion;
+        }
+
+        function division() {
+            var v1 = parseInt(document.getElementById("valor1").value);
+            var v2 = parseInt(document.getElementById("valor2").value);
+            var division = 0;
+
+            division = v1 / v2;
+
+            document.getElementById("resultado").value = division;
         }
     </script>
 
