--- a/index.html
+++ b/index.html
@@ -4,67 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h3>Sumar dos números</h3>
         <form action="">
         Valor 1: <input type="number" id="valor1" value="0"><br>
         Valor 2: <input type="number" id="valor2" value="0"><br>
-        <input type="button" value="Sumar" onclick="sumar();"><br>
-        <input type="button" value="Restar" onclick="restar();"><br>
-        <input type="button" value="Multiplicar" onclick="multiplicacion();"><br>
+        <input type="button" value="Sumar" onclick="sumar();">
+        <input type="button" value="Restar" onclick="restar();">
+        <input type="button" value="Multiplicar" onclick="multiplicacion();">
         <input type="button" value="Dividir" onclick="division();"><br>
 
         Resultado: <input type="number" id="resultado" value = "0">
-
-    </div>
     
     </form>
+        <script src="js/funciones.js"></script>
+    </div>
 
-    <script>
-
-        function sumar() {
-            var v1 = parseInt(document.getElementById("valor1").value);
-            var v2 = parseInt(document.getElementById("valor2").value);
-            var suma = 0;
-
-            suma = v1 + v2;
-
-            document.getElementById("resultado").value = suma;
-        }
-
-        function restar() {
-            var v1 = parseInt(document.getElementById("valor1").value);
-            var v2 = parseInt(document.getElementById("valor2").value);
-            var resta = 0;
-
-            resta = v1 - v2;
-
-            document.getElementById("resultado").value = resta;
-        }
-
-        function multiplicacion() {
-            var v1 = parseInt(document.getElementById("valor1").value);
-            var v2 = parseInt(document.getElementById("valor2").value);
-            var multiplicacion = 0;
-
-            multiplicacion = v1 * v2;
-
-            document.getElementById("resultado").value = multiplicacion;
-        }
-
-        function division() {
-            var v1 = parseInt(document.getElementById("valor1").value);
-            var v2 = parseInt(document.getElementById("valor2").value);
-            var division = 0;
-
-            division = v1 / v2;
-
-            document.getElementById("resultado").value = division;
-        }
-    </script>
+    
 
 </body>
 </html>
